--- a/pipas.html
+++ b/pipas.html
@@ -22,7 +22,7 @@
                     <li><a href="AboutMe.html" style="--i:2;">Tentang Saya</a></li>
                 </ul>
                 <ul>
-                    <li><a href="home.html" style="--i:3;">Home</a></li>
+                    <li><a href="index.html" style="--i:3;">Home</a></li>
                 </ul>
                 <ul class="aktif">
                     <li><a href="pipas.html" style="--i:4;">PIPAS</a></li>
