--- a/project.html
+++ b/project.html
@@ -22,7 +22,7 @@
                         <li><a href="Bsunda.html" style="--i:2;">B.Sunda</a></li>
                     </ul>
                     <ul>
-                        <li><a href="home.html" style="--i:3;">Home</a></li>
+                        <li><a href="index.html" style="--i:3;">Home</a></li>
                     </ul>
                     <ul class="aktif">
                         <li><a href="project.html" style="--i:4;">Project</a></li>
