--- a/AboutMe.html
+++ b/AboutMe.html
@@ -21,7 +21,7 @@
                         <li><a href="AboutMe.html">Tentang Saya</a></li>
                     </ul>
                     <ul>
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                     </ul>
                     <ul>
                         <li><a href="cv/Tugas CV (1).pdf" target="blank">Download CV</a></li>
