--- a/keahlian.html
+++ b/keahlian.html
@@ -22,7 +22,7 @@
                         <li><a href="AboutMe.html">Tentang Saya</a></li>
                     </ul>
                     <ul>
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html".html">Home</a></li>
                     </ul>
                     <ul>
                         <li><a href="https://wa.me/6283830540074" target="blank">Contact Me </a></li>
