--- a/project.html
+++ b/project.html
@@ -45,7 +45,7 @@
     
             <div class="service-box" id="1">
                 <h3>Sejarah</h3>
-                <a href = "b.sunda"><img src="img/WhatsApp Image 2025-02-18 at 13.33.50_69842996.jpg"></a>
+                <a href = "sejarah.html"><img src="img/WhatsApp Image 2025-02-18 at 13.33.50_69842996.jpg"></a>
             </div>
         </div>
 </body>
